--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,18 +12,17 @@ body {
 		line-height: 25px;
 		justify-content: space-between;
 
-		div{
+		div {
 			padding: 0px 15px;
-				color: #fff;
-				font-size: 14px;
+			color: #fff;
+			font-size: 14px;
 		}
-		
 	}
 }
 .secondary-navbar {
 	background: #0a5b86;
 	position: sticky;
-	top: 0px;
+	top: -1px;
 	z-index: 9;
 	box-shadow: 0px 5px 10px #0606065c;
 	.logo {
@@ -93,7 +92,7 @@ body {
 		color: #ffffff;
 		text-shadow: 0px 2px 10px #050505;
 	}
-	.subtitle{
+	.subtitle {
 		font-size: 18px;
 		color: white;
 		width: 70%;
@@ -195,7 +194,9 @@ body {
 // need a repair
 .need-repair {
 	background: #0a5b86;
-	img{
+	position: relative;
+	margin: 30px auto;
+	img {
 		height: 320px;
 	}
 	.need-repair-wrapper {
@@ -209,16 +210,40 @@ body {
 			font-weight: bold;
 			color: white;
 		}
-		.submit-btn {
-			margin-top: 30px;
-			button {
-				border: none;
-				background: #fdfdfd;
-				padding: 8px 15px;
-				color: #0a5b86;
-				margin-top: 15px;
-				font-weight: bold;
-				border-radius: 5px;
+	}
+	.mobile {
+		position: absolute;
+		top: -15%;
+		bottom: 0;
+		text-align: center;
+		img {
+			height: 120%;
+		}
+		.inquery-form {
+			position: absolute;
+			top: 10%;
+			bottom: 0;
+			width: 80%;
+			left: 10%;
+			text-align: left;
+			.form-group {
+				margin-bottom: 5px;
+			}
+			.form-control {
+				height: 35px;
+			}
+			.submit-btn {
+				text-align: center;
+				button {
+					border: none;
+					background: #0a5b86;
+					padding: 5px 15px;
+					color: #fefefe;
+					font-size: 14px;
+					margin-top: 30px;
+					font-weight: bold;
+					border-radius: 5px;
+				}
 			}
 		}
 	}
@@ -240,7 +265,6 @@ body {
 				text-align: center;
 				padding-bottom: 15px;
 			}
-		
 		}
 	}
 }
@@ -313,17 +337,15 @@ body {
 			font-size: 36px;
 			font-weight: bold;
 			z-index: 1;
-			padding-bottom:  15px;
-			
-
+			padding-bottom: 15px;
 		}
 		.learn-more {
 			font-size: 18px;
 			font-weight: lighter;
 			z-index: 1;
-			a{
+			a {
 				color: white;
-				&:hover{
+				&:hover {
 					color: #0076ce;
 				}
 			}
@@ -339,12 +361,11 @@ body {
 			background: #00000052;
 		}
 	}
-	.item-wrap:hover{
-		&::after{
+	.item-wrap:hover {
+		&::after {
 			background: #0000008c;
 		}
 	}
-	
 }
 
 // footer
